--- a/Homework 11/src/Templates/landing.html
+++ b/Homework 11/src/Templates/landing.html
@@ -26,7 +26,13 @@
 
             <div class="links">
               <ul>
-                 <li><a href="{{url_for('signUp')}}" class="btn" >Sign up</a></li>
+                 <li><a href="{{url_for('login')}}" class="btn" >Login</a></li>
+              </ul>
+            </div>
+
+            <div class="links">
+              <ul>
+                 <li><a href="{{url_for('registration')}}" class="btn" >Registration</a></li>
               </ul>
             </div>
 
