--- a/Homework 11/src/Templates/mainPage.html
+++ b/Homework 11/src/Templates/mainPage.html
@@ -37,17 +37,17 @@
         <div class="bottom_nav">
           <ul>
             <li>
-              <a href="{{url_for('signIn')}}"
+              <a href="{{url_for('login')}}"
                 ><i class="fa-solid fa-arrow-right-from-bracket"></i> Log out</a
               >
             </li>
           </ul>
         </div>
       </div>
+
       <div class="main_content">
         <div class="header">
-          <h1>Hello {{user_name}}, </h1>
-              <h1>Showing all ({{contacts_amount}}) Contacts.</h1>
+          <h1>Welcome {{user_name}}, Showing all ({{contacts_amount}}) Contacts.</h1>
           <div class="nav_icons">
             <i href="#myModal3" class="modal_btn fa-solid fa-gear"></i>
             
