--- a/Homework 11/src/Templates/registration.html
+++ b/Homework 11/src/Templates/registration.html
@@ -21,6 +21,12 @@
 	<div class="main">  	
 		<input type="checkbox" id="chk" aria-hidden="true">
 
+			<div class="links">
+              <ul>
+                 <li><a href="{{url_for('login')}}" class="btn" >Login</a></li>
+              </ul>
+			</div>
+
 			<div class="signup">
 				<form method="POST" action="" class="sign-up-form">
 
