--- a/Homework 11/src/Templates/login.html
+++ b/Homework 11/src/Templates/login.html
@@ -23,7 +23,11 @@
 	<div class="main">  	
 		<input type="checkbox" id="chk" aria-hidden="true">
 
-
+			<div class="links">
+              <ul>
+                 <li><a href="{{url_for('registration')}}" class="btn" >Registration</a></li>
+              </ul>
+            </div>
 
 			<div class="login">
 				<form method="POST" action="" class="login">
