--- a/Homework 12/stylesheets/main.css
+++ b/Homework 12/stylesheets/main.css
@@ -1,7 +1,7 @@
 /* @override http://templates.jonnotie.nl/iphone/stylesheets/main.css */
 
 * {
-	margin: 0;
+	margin: 20;
 	padding: 0;
 }
 
@@ -11,12 +11,16 @@ html, body {
 }
 
 body {
+
 	color: #a7abb0;
-	font: 12px/18px "Lucida Grande", Lucida, "Lucida Grande Unicode", Verdana, sans-serif;
+	font: 20px/18px "Lucida Grande", Lucida, "Lucida Grande Unicode", Verdana, sans-serif;
 	text-shadow: rgba(0,0,0,0.41) 0 -1px 1px;
 }
 
 p {
+    margin-left: auto;
+    margin-right: auto;
+
 	margin-bottom: 18px;
 }
 
@@ -678,6 +682,11 @@ form p.error big {
 	z-index: 1;
 }
 
+.center {
+  display: float;
+  margin-left: 0;
+  margin-right: auto;
+}
 
 
 /* @end */
